# AITESTGEN

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
_bmad/: config.toml
_bmad-output/: project-flow-vs-status.html
_bmad-output/implementation-artifacts/: 1-1-repository-service-scaffold.md  1-2-sign-in-organization-scoped-workspace.md  1-3-onboard-an-application-basic-details.md  1-4-configure-application-authentication-method.md  1-5-configure-discovery-scope-time-budget.md  1-6-dynamic-browser-tab-branding.md  2-1-start-a-discovery-run.md  2-2-autonomous-exploration-captures-evidence.md  2-3-discovery-stop-conditions-completeness-status.md  2-4-session-expiry-handling.md  2-5-ai-journey-capability-inference-from-evidence.md  2-5-application-model-builder.md  2-6-ai-journey-capability-inference-from-application-model.md  2-7-business-oriented-import-progress-display.md  3-1-review-queue-candidate-list-evidence-panel.md  3-2-approve-a-journey-capability.md  3-3-reject-a-journey-capability.md  3-4-rename-delete-a-journey-capability.md  3-5-review-queue-empty-state-new-journey-flagging-on-re-discovery.md  4-1-generate-scenarios-for-an-approved-journey.md  4-2-generate-playwright-test-assets-from-scenarios.md  4-3-full-regeneration-of-test-assets-on-request.md  5-1-configure-git-host-export-mode-per-application.md  5-2-deliver-test-assets-via-pull-request-or-direct-commit.md  5-3-select-ci-system-receive-manual-wiring-instructions.md  6-1-capability-map.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-13.md  sprint-change-proposal-2026-07-15.md  sprint-change-proposal-2026-07-18.md  sprint-change-proposal-2026-07-21.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: __init__.py  auth.py  db.py  discovery.py  main.py  temporal_client.py
apps/api/src/api/scripts/: seed_dev_data.py  temporal_smoke_test.py
apps/api/tests/: conftest.py  test_auth.py  test_discovery_progress.py  test_health.py  test_journey_curation.py  test_onboarding.py  test_scaffold_probe_db.py  test_scenario_generation.py  test_test_suite_generation.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/workers/discovery/: Dockerfile  pyproject.toml
apps/workers/discovery/src/discovery_worker/: __init__.py  activities.py  crawler.py  db.py  identity_key.py  journey_clustering.py  model_builder.py  object_store.py  session.py  temporal_client.py  worker.py
apps/workers/discovery/tests/: conftest.py  test_crawler.py  test_discovery_activity_integration.py  test_discovery_workflow.py  test_identity_key.py  test_inference_activity.py  test_journey_clustering.py
apps/workers/discovery/tests/fixtures/: target_app.py
apps/workers/generation/: Dockerfile  pyproject.toml
apps/workers/generation/src/generation_worker/: __init__.py  activities.py  db.py  worker.py
apps/workers/generation/tests/: test_playwright_generation_activity.py  test_scenario_generation_activity.py
docs/: DEVELOPER_GUIDE.md  EPIC_2_DISCOVERY_PIPELINE.md
k8s/: 01-configmap.yaml  02-postgres.yaml  03-vault.yaml  04-minio.yaml  06-api.yaml  08-discovery-worker.yaml  09-generation-worker.yaml
migrations/: env.py  script.py.mako
migrations/versions/: 31f9485f28e9_add_scenario_entity.py  3206b535a942_drop_disposable_scaffold_probe_proof_.py  3a8fcd9d64e0_scaffold_probe_proof_entity.py  6c1645fa421a_add_evidence_entity.py  a1b2c3d4e5f6_add_stage_to_discovery_run.py  a4e1f9c2b7d3_add_test_suite_and_test_asset_entities.py  b629403bf8d9_add_description_to_journey.py  (+10 more)
scripts/: run-discovery-worker.cmd  run-generation-worker.cmd
(+68 files in other folders)
