[project]
name = "api"
version = "0.1.0"
description = "apps/api — FastAPI service: auth, CRUD, curation endpoints, starts/queries workflows"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "temporalio>=1.9",
    "domain",
    "workflows",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv.sources]
domain = { workspace = true }
workflows = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
