[project]
name = "discovery-worker"
version = "0.1.0"
description = "apps/workers/discovery — Execution layer for DiscoveryActivity (Playwright) and InferenceActivity (Epic 2)"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_worker"]
