[project]
name = "discovery-worker"
version = "0.1.0"
description = "apps/workers/discovery — Execution layer for DiscoveryActivity (Playwright) and InferenceActivity (Epic 2)"
requires-python = ">=3.14"
dependencies = [
    "temporalio>=1.9",
    "workflows",
    "domain",
    "secrets-client",
    "ai-provider",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2",
    "playwright>=1.57",
    "minio>=7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.9",
]

[tool.uv.sources]
workflows = { workspace = true }
domain = { workspace = true }
secrets-client = { workspace = true }
ai-provider = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery_worker"]
