[project]
name = "generation-worker"
version = "0.1.0"
description = "apps/workers/generation — Temporal worker process for GenerationWorkflow and its Activities"
requires-python = ">=3.14"
dependencies = [
    "temporalio>=1.9",
    "workflows",
    "domain",
    "ai-provider",
    "sqlmodel>=0.0.24",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
workflows = { workspace = true }
domain = { workspace = true }
ai-provider = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generation_worker"]
